changes to pictures directory

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                 <p class="menu__text">Here lies the best of food</p>
             </article>
             <article class="menu__items">
-                <img src="/images/food1.png" alt="chicken burger">
+                <img src="./images/food1.png" alt="chicken burger">
                 <h2 class="items__name">Chicken Burger</h2>
                 <p class="items__price">&dollar;6.55</p>
             </article>
             <article class="menu__items">
-                <img src="/images/food2.png" alt="beef burger">
+                <img src="./images/food2.png" alt="beef burger">
                 <h2 class="items__name">Beef Burger</h2>
                 <p class="items__price">&dollar;8.99</p>
             </article>
             <article class="menu__items">
-                <img src="/images/food3.png" alt="fried chicken">
+                <img src="./images/food3.png" alt="fried chicken">
                 <h2 class="items__name">Fried Chicken</h2>
                 <p class="items__price">&dollar;15.65</p>
             </article>
