some minor changes

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                 <p class="services__text">From us to you</p>
             </article>
             <article class="services__service">
-                <img src="/images/s1.png" alt="">
+                <img src="./images/s1.png" alt="">
                 <p class="service__text">Well Packged</p>
             </article>
             <article class="services__service">
-                <img src="/images/s2.png" alt="">
+                <img src="./images/s2.png" alt="">
                 <p class="service__text">Well Deliverd</p>
             </article>
             <article class="services__service">
-                <img src="/images/s3.png" alt="">
+                <img src="./images/s3.png" alt="">
                 <p class="service__text">Well Received</p>
             </article>
         </section>
